2006-07-14  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkaccelmap.xml: Add.

	* pygtk-gtkaccelgroup.xml: Move accel map functions to
	pygtk-gtkaccelmap.xml

	* pygtk-gtk-classes.xml: Add pygtk-gtkaccelmap.xml

2006-07-12  John Finlay  <finlay@moeraki.com>

	* pygtk-unixprint-classes.xml: Add pygtk-unixprint-functions.xml.

	* pygtk-unixprint-functions.xml: Add gtk.unixprint.enumerate_printers.

	* pygtk-gtkprinter.xml (accepts_ps, accepts_pdf): Add.

2006-07-07  John Finlay  <finlay@moeraki.com>

	* pygtk-pangofontfamily.xml (is_monospace): Fix Returns description.
	#340108 (Wouter Bolsterlee)

	* pygtk-gtk-constants.xml (Selection Mode Constants): Add link
	to TreeSelection. #329898 (Nikos Kouremenos)

	* pygtk-gtkfilechooser.xml (FileNamesAndEncodings): Add. #327888
	(Nikos Kouremenos)

	* pygtk-gtkexpander.xml ("activate"): Add note and link about using
	"notify:expanded" instead of activate. #323403 (Murray Cummings)

	* pygtk-gtkspinbutton.xml (spin): increment defaults to 1.0

	* pygtk-pango-functions.xml 
	* pygtk-pangoattrlist.xml (pango.parse_markup): accel_marker defaults
	to u'\x00 - fix description.

	* pygtk-pangocairo-functions.xml: Fix function names and reorg.

	* pygtk-gtkcellrenderertoggle.xml ("toggled"): path is a string.
	Fixes #334473 (Alexander Konovalenko)

	======== 2.9.0 ============
2006-07-06  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml: Version 2.9.0.

	* pygtk-introduction.xml: Update for PyGTK 2.10

	* pygtk-pangofont.xml (get_font_map): Add.

	* pygtk-pangofontdescription.xml (get_size_is_absolute)
	(set_absolute_size): Add.

	* pygtk-pangoattribute.xml: Add descriptions of new text attributes.

	* pygtk-atk-constants.xml: Add Text constants.

	* pygtk-atkrectangle.xml: Add.

	* pygtk-atk-classes.xml: Add pygtk-atkrectangle.

	* pygtk-atkregistry.xml: 
	* pygtk-atkrelation.xml: 
	* pygtk-atkrelationset.xml: 
	* pygtk-atkselection.xml: 
	* pygtk-atkstateset.xml: 
	* pygtk-atkstreamablecontent.xml: 
	* pygtk-atktable.xml: 