@@ -454,6 +454,16 @@ role="keyword">data</parameter>&nbsp;:</term>
       the menu should be pushed in to be completely inside the screen
       instead of just clamped to the size of the screen.</para>
 
+      <note>
+        <para>Prior to PyGTK 2.10 this method did not accept the
+        <parameter>data</parameter> parameter and the signature of
+        <parameter>func</parameter> was:</para>
+
+        <programlisting>
+  def func(menu, user_data):
+        </programlisting>
+      </note>
+
     </refsect2>
 
     <refsect2 id="method-gtkmenu--reposition">
