@@ -1,3 +1,10 @@
+2006-07-18  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtktreeselection.xml (set_select_function): Update description
+	for 2.10 changes to enable full callback args.
+
+	* pygtk-gtkmenu.xml (popup): Note func signature prior to 2.10.
+
 2006-07-14  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkaccelmap.xml: Add.
